syntax = "proto3";

option go_package = "tb/api/settings/v1;settingsv1";

import "google/protobuf/timestamp.proto";

package tb.settings.v1;

service Settings {
  rpc Get(GetRequest) returns (GetResponse);
}

message GetRequest {

}

message GetResponse {
  int64 max_participants = 1;

  bool sales_disabled = 2;
  google.protobuf.Timestamp sales_open_at = 3;
}
